platform-infra/clusters/preview/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: env-preview-api-ingress
  namespace: env-preview
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`env-preview.appfactory.local`)
    priority: 10
    services:
    - name: env-preview
      namespace: env-preview
      port: 443
  tls:
    passthrough: true
